cursoor visibility fix, entrance animation fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@ main {
   left: 0;
   top: 0;
   pointer-events: none;
-
+  display: none;
   &-small {
     width: 8px;
     height: 8px;
